<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_screen_2"
    android:theme="@style/AppTheme.NoActionBar"
    tools:context=".activities.authentication.LoginActivity">

    <ImageButton
        android:id="@+id/loginSettingsButton"
        android:layout_width="42dp"
        android:layout_height="41dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/setting_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_settings_white_36" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="48dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true">

            <TextView
                android:id="@+id/textView16"
                style="@style/TextAppearance.Cradle.H1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView25"
                style="@style/TextAppearance.Cradle.H1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/log_in"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintHorizontal_bias="0.39"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView16" />

            <TextView
                android:id="@+id/textView26"
                style="@style/TextAppearance.Cradle.H2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/email"
                app:layout_constraintStart_toStartOf="@+id/textView25"
                app:layout_constraintTop_toBottomOf="@+id/textView25" />

            <TextView
                android:id="@+id/textView27"
                style="@style/TextAppearance.Cradle.H2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/password"
                app:layout_constraintStart_toStartOf="@+id/emailEditText"
                app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                style="@style/TextAppearance.Cradle.Body1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/login_email_hint"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:scrollHorizontally="true"
                android:ellipsize="end"
                android:maxLines="1"
                android:textCursorDrawable="@null"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="@+id/textView26"
                app:layout_constraintTop_toBottomOf="@+id/textView26" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                style="@style/TextAppearance.Cradle.Body1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/emailEditText"
                app:layout_constraintStart_toStartOf="@+id/textView27"
                app:layout_constraintTop_toBottomOf="@+id/textView27" />

            <ImageButton
                android:id="@+id/togglePasswordButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/show_password"
                app:layout_constraintBottom_toBottomOf="@+id/passwordEditText"
                app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
                app:srcCompat="@drawable/baseline_visibility_24" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight"
                android:fontFamily="@font/ibm_plex_sans_regular"
                android:text="@string/go"
                app:backgroundTint="@color/colorPrimaryLight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

            <TextView
                android:id="@+id/invalidLoginText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/login_error"
                android:textColor="@color/error"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/loginButton"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="@+id/passwordEditText"
                app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
                app:layout_constraintVertical_bias="0.0"
                tools:visibility="visible" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".9" />

            <TextView
                android:id="@+id/internetAvailabilityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/login_activity_no_internet"
                android:textColor="@color/error"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/loginButton"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>