...


    <!-- Intro Wizard -->
    <string name="intro_tab_welcome">CRADLE VSA Support App</string>
    <string name="intro_tab_permissions">Permissions</string>
    <string name="intro_tab_privacy_policy">Privacy Policy</string>
    <string name="done">I ACCEPT</string>
    <string name="intro_permission_description">
        <![CDATA[
        <p>App requires some permissions:</p>
        <h3>Camera</h3>
        <p>App uses the camera to take a photo of the CRADLE VSA\'s screen after it measures vitals.</p>
        <h3>SMS</h3>
...
    <string name="medical_history">Medical History</string>
    <string name="drug_history">Drug History</string>
    <string name="take_new_reading_button">Take New Reading</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="go">Go</string>
    <string name="logging_in">Logging in</string>
    <string name="login_successful">Login successful!</string>
    <string name="login_error">Invalid email or password.</string>
    <string name="login_activity_no_internet">No internet available</string>
    <string name="activity_patients_no_patients_message">You don\'t have any patients right now.\n Go to the dashboard to create a new patient.</string>
    <string name="pregnant_question">Pregnant?</string>
...
    <string name="urine_test_layout_nitrites">Nitrites</string>
    <string name="urine_test_layout_protein">Protein</string>
    <string name="urine_test_layout_blood">Blood</string>
    <string name="urine_test_layout_glucose">Glucose</string>
    <string name="urine_test_layout_table_header_result">Result</string>
    <string name="household_number">Household number</string>
    <string name="patient_error_id_missing">Missing patient ID</string>
    <string name="patient_error_id_must_be_number">ID must be a number</string>
    <string name="patient_error_id_too_long_max_n_digits">ID is too long; max is %1$d digits.</string>
    <string name="patient_error_name_missing">Missing name</string>
    <string name="patient_error_dob_missing">Missing date of birth</string>
    <string name="patient_error_dob_format">Wrong date of birth format (need %1$s)</string>
    <string name="patient_error_age_between_n_and_m">Age must be between %1$d and %2$d</string>
...
