...
                android:paddingEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_chevron_left_black_18" />

            <ImageView
                android:id="@+id/ivNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingRight="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
...
                app:layout_constraintBottom_toBottomOf="@+id/ivNext"
                app:layout_constraintEnd_toStartOf="@+id/ivNext"
                app:layout_constraintTop_toTopOf="@+id/ivNext"
                app:layout_constraintVertical_bias="0.5" />

            <TextView
                android:id="@+id/txtDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:padding="10dp"
                android:paddingEnd="40dp"
                android:text="@string/done"
...
