...
                    app:layout_constraintHorizontal_weight="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/patient_info_title"
                    errorMessage='@{viewModel.errorMap["name"]}'>

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/patient_name_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textNoSuggestions|textPersonName"
                        android:maxLength="@{Patient.NAME_MAX_LENGTH}"
                        android:nextFocusDown="@+id/patient_id_text"
                        android:text="@={viewModel.patientName}"
                        tools:text="ABC" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/patient_id_text_layout"
...
